Attribute checks
Add more compile time type safety checks for attributes and bounds
checks on all types.